[package]
name = "rsm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["cargo"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
serde_with = "3.9.0"
strum_macros = "0.26"

chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
urlencoding = "2.1.3"
rpassword = "7.3.1"
terminal-spinners = "0.3.2"
